# rss-digest

./: .gitignore  CLAUDE.md  README.md  crontab.example  pyproject.toml
src/config/: .env.example  config.py
src/services/: __init__.py  digest_service.py
src/utils/: ai_utils.py  db_utils.py  system_prompt.md  system_prompt_stage1.md  telegram_utils.py  telegraph_utils.py
