[project]
name = "rss-digest"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.13.3",
    "openai==1.72.0",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "soupsieve==2.6",
    "telegraph>=2.2.0",
    "typing-extensions==4.13.0",
]
